--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,11 @@ ul{
 /* Hero */
 
 .hero{
+    font-family: Roboto;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    letter-spacing: 0.06em;
     padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
@@ -177,12 +182,14 @@ ul{
     margin-left: auto;
     margin-right: auto;
     align: center;
-    color: rgba(255, 255, 255, 1);
+    color: var(--accent-color-text);
     font-weight: 900;
     font-size: 44px;
     line-height: 60px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    padding-left: 452px;
+    padding-top: 280px;
 }
 /* Hero button */
 
@@ -197,6 +204,7 @@ ul{
     text-decoration: none;
     border-radius: 4px;
     padding: 10px 32px;
+    margin-top: 30px;
    }
 
 /* Feature */
@@ -235,9 +243,9 @@ ul{
 /* Примеры работ */
 
 .about-us-section{
-    text-align: center;
+    
     padding-top: 0px;
-    padding-bottom: 94px;
+    
 }
 .about-us-title{
       color: var(--titles-text-color-first);
@@ -390,44 +398,38 @@ ul{
     padding-bottom: 60px;
 
 }
-.f-logo-web {
+.footer-container{
+    display: flex;
+    align-items: baseline;
+}
+.footer-logo{
+    font-family: Raleway,sans-serif;
+    color: var(--accent-color-text);
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 00.03em;
+}
+.f-web{
     color: var(--accent-color);
     font-family: Raleway;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    text-decoration: none;
 }
-.f-logo-studio {
-    color: var(--accent-color-text);
+.f-webstudio{
     font-family: Raleway;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    text-decoration: none;
 }
-/* Контакты */
-
-.address{
-    font-style: normal;
-    margin-top: 20px;
-    
+.footer-logo:hover,
+.footer-logo:focus{
+    color: var(--accent-color);
 }
-.address-list{
-    margin-top: 9px;
-}
-.footer-map{
-    color: var(--accent-color-text);
-    display: inline-block;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-    margin-top: 9px;
-}
-.footer-address {
+.footer-address{
     display: inline-block;
     margin-top: 9px;
     display: block;
@@ -437,3 +439,53 @@ ul{
     letter-spacing: 0.03em;
     text-decoration: none;
 }
+.footer-item{
+    margin-top: 9px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+.contacts {
+    color: rgba(255, 255, 255, 0.6);
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
+  .address-map:hover,
+  .address-map:focus {
+    color: var(--accent-color);
+  }
+  .contacts:hover,
+  .contacts:focus {
+    color: var(--accent-color);
+  }
+
+
+/* Контакты */
+
+
+.address{
+    font-style: normal;
+    margin-top: 20px;
+    
+}
+.address-list{
+    margin-top: 9px;
+}
+.address-map{
+    display: inline-block;
+    font-style: normal;
+    margin-top: 20px;
+    color: var(--accent-color-text);
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+}
+
+
