--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,7 @@ ul{
 /* Hero */
 
 .hero{
+    max-width: 1600px;
     font-family: Roboto;
     font-weight: 900;
     font-size: 44px;
@@ -173,6 +174,14 @@ ul{
     text-align: center;
     color: var(--accent-color-text);
     background-color: var(--background-color);
+    height: 600px;
+    outline: 1px solid #000000;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/Img.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .hero-title .centered {
     position: absolute;
@@ -190,6 +199,18 @@ ul{
     text-transform: uppercase;
     padding-left: 452px;
     padding-top: 280px;
+}
+/* Overlay */
+.overlay{
+    max-width: 1600px;
+    height: 600px;
+    outline: 1px solid #000000;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: url("../images/Img.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 /* Hero button */
 
@@ -237,6 +258,17 @@ ul{
     width: 270px;
     margin-left: 30px;
 }
+.feature-item::before{
+    display: block;
+    outline: solid 1px black;
+    content: "";
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 120px;
+    background-position: center;
+    background-image: url();
+}
+
 .feature-item:first-child{
     margin-left: 0px;
 }
