--- a/css/styles.css
+++ b/css/styles.css
@@ -271,8 +271,7 @@ ul{
 }
 .feature-item:nth-child(1)::before{
     background-image: url(../images/features/Group.svg);
-    
-}
+    }
 .feature-item:nth-child(2)::before{
     background-image: url(../images/features/clock\ 1.svg);
 }
@@ -282,15 +281,6 @@ ul{
 .feature-item:nth-child(4)::before{
     background-image: url(../images/features/astronaut\ 1.svg);
 }
-.feature-icon{
-    content: "";
-    display: flex;
-    border-radius: 50%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
 .feature-item:first-child{
     margin-left: 0px;
 }
@@ -374,8 +364,22 @@ ul{
       text-align: center;
       letter-spacing: 0.03em;
 }
-
-
+.social-list {
+    outline: 1px solid red;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  .button-social{
+      padding: 0;
+      border: none;
+  }
+  .button-icon{
+      width: 44px;
+      height: 44px;
+  }
+ 
 
 /* Buttons */
 .btn{
