--- a/css/styles.css
+++ b/css/styles.css
@@ -371,13 +371,28 @@ ul{
     margin: 0;
     list-style: none;
   }
+  
   .button-social{
       padding: 0;
       border: none;
-  }
-  .button-icon{
       width: 44px;
       height: 44px;
+      border-radius: 50%;
+      color:red;
+      background-color: var(--accent-color-text);
+  }
+ /* .button-social:hover{ */
+    /* background-color: var(--accent-color-text); */
+/* } */
+  .button-icon{
+      width: 20px;
+      height: 20px;
+      fill: currentColor;
+      
+
+  }
+  .button-icon:hover{
+      background-color: var(--accent-color);
   }
  
 
