--- a/css/styles.css
+++ b/css/styles.css
@@ -74,12 +74,8 @@ a{
     padding-left: 15px;
     padding-right: 15px;
 }
-.site-nav{
-    display: flex;
-}
-.site-nav .nav-item + .nav-item{
-    margin-left: 40px;
-}
+
+
 .nav-box{
     display: flex;
     align-items: center;
@@ -88,6 +84,7 @@ a{
 .nav-logo{
     margin-right: 93px;
     text-decoration: none;
+    
 }
 .logo-web {
     font-family: Raleway, sans-serif;
@@ -97,6 +94,10 @@ a{
     line-height: 1.19;
     letter-spacing: 0.03em;
 }
+.logo-web:hover,
+.logo-web:focus{
+    color: var(--accent-color);
+}
 .logo-studio {
     font-family: Raleway, sans-serif;
     color: var(--titles-text-color-first);
@@ -105,11 +106,18 @@ a{
     line-height: 1.19;
     letter-spacing: 0.03em;
 }
+.logo-studio:hover,
+.logo-studio:focus{
+    color: var(--accent-color);
+}
 
 /* site-nav*/
 
 .site-nav{
     display: flex;
+}
+.site-nav .nav-item + .nav-item{
+    margin-left: 40px;
 }
 .site-nav .link {
     display: block; 
@@ -131,7 +139,7 @@ a{
     color: var(--accent-color);
 }
 
-/* web studio */
+/* web studio -contacts*/
 
 .contact-nav{
     display: flex;
@@ -144,13 +152,30 @@ a{
 .contact-nav .item + .item {
     margin-left: 50px;
 }
+.contact-nav-icon-f{
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+    fill: currentColor;
+}
+.contact-nav-icon-s{
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+    fill: currentColor;
+}
 .contacts-link {
+    display: inline-flex;
+    align-items: center;
     color: var(--text-color);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    text-decoration: none;
+    
+}
+.contact-nav .item:last-child{
+    margin-right: 0;
 }
 .contacts-link:hover,
 .contacts-link:focus{
@@ -244,6 +269,9 @@ a{
 .feature-list{
     display: flex;
 }
+.feature-item:first-child{
+    margin-left: 0px;
+}
 .feature-title{
     color: var(--titles-text-color-first);
     font-weight: 700;
@@ -264,7 +292,19 @@ a{
     width: 270px;
     margin-left: 30px;
 }
-.feature-item::before{
+.feature-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
+    background-color: var(--backing-color);
+    margin-bottom: 30px;
+}
+.feature-icon .icon{
+    width: 70px;
+    height: 70px;
+}
+/* .feature-item::before{
     display: block;
     height: 120px;
     content: "";
@@ -285,10 +325,8 @@ a{
 }
 .feature-item:nth-child(4)::before{
     background-image: url(../images/features/astronaut\ 1.svg);
-}
-.feature-item:first-child{
-    margin-left: 0px;
-}
+} */
+
 /* Примеры работ */
 
 .about-us-section{
@@ -447,9 +485,9 @@ a{
     margin: -15px;
     }
 .portfolio-image{
-        margin: 15px;
-        width: 370px;
-        display: block;
+    margin: 15px;
+    width: 370px;
+    display: block;
     }
 .portfolio-img{
     display: block;
@@ -502,7 +540,7 @@ a{
 }
 .section-title{
     margin-bottom: 50px;
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
@@ -596,13 +634,7 @@ a{
 }
 .footer-item{
     margin-top: 9px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
+    
 }
 .contacts {
     color: rgba(255, 255, 255, 0.6);
@@ -618,6 +650,54 @@ a{
   .contacts:hover,
   .contacts:focus {
     color: var(--accent-color);
+  }
+  .fsocial-title{
+      margin-left: 70px;
+  }
+  .footer-title{
+      color: var(--accent-color-text);
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+  }
+  .fsocial-list{
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+  }
+  .fsocial-icon{
+      width: 20px;
+      height: 20px;
+     
+     
+      
+  }
+  .fsocial-item:first-child{
+      margin-left: 0;
+  }
+  .fsocial-link{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      color: #afb1b8;
+      background: rgba(255, 255, 255, 0.1);
+  }
+  .fsocial-icon{
+      fill: var(--accent-color-text);
+  }
+  .fsocial-link:hover,
+  .fsocial-link:focus{
+      fill: var(--accent-color-text);
+      background-color: var(--accent-color);
+  }
+  .fsocial-link:hover .fsocial-icon,
+  .fsocial-link:focus .fsocial-icon{
+      fill: var(--accent-color-text);
   }
 
 
