--- a/css/styles.css
+++ b/css/styles.css
@@ -659,9 +659,9 @@ a{
       width: 20px;
       height: 20px;
     }
-  /* .fsocial-item:first-child{
+  .fsocial-item:first-child{
       margin-left: 0;
-  } */
+  }
   .fsocial-link{
       display: flex;
       justify-content: center;
